# vdb.rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODOS.md  build.rs
.github/workflows/: ci.yml
data/mydb/: index-0.vdb  manifest.json
examples/: best_performance.rs  embedded.rs  hongloumeng_rag.sh  lookup_results.py  mmap_zero_copy.rs  nng_client.rs  performance_benchmark.sh  performance_matrix.rs  server_http.rs  siftsmall_benchmark.sh  text_to_vectors.py
reports/: siftsmall_compare.json  vdb_siftsmall_default.json  vdb_siftsmall_nprobe100.json  vdb_siftsmall_nprobe100_nofastscan.json  vdb_siftsmall_nprobe16.json  vdb_siftsmall_nprobe16_refine1000.json  vdb_siftsmall_nprobe16_refine5000.json  vdb_siftsmall_nprobe50.json  vdb_siftsmall_nprobe50_refine1000.json  vdb_siftsmall_nprobe50_refine5000.json
scripts/: bench_siftsmall_compare.py
src/: benchmark.rs  cli.rs  fulltext.rs  gpu.rs  http_server.rs  hybrid.rs  index_ivf_rq.rs  lib.rs  mmap_index.rs  nng_server.rs  search.rs  server.rs  simd.rs  sql.rs  storage.rs  sys_info.rs  thread_pool.rs  vdb.rs
src/web/: app.js  index.html  style.css
tests/: acceptance.rs  e2e.rs  hybrid.rs  integration.rs  regression.rs  server.rs  smoke.rs  system.rs  unit.rs
